[pwando] - Set access to only admin and lecturers

--- a/essayadmin/register.conf
+++ b/essayadmin/register.conf
@@ -6,14 +6,16 @@ MODULE_RELEASEDATE: 2004 12 01
 MODULE_PATH: essayadmin
 MODULE_LANGTERMS: Essay Management
 MODULE_ISVISIBLE: 1
-MODULE_ISADMIN: 0
+MODULE_ISADMIN: 1
 MODULE_HASADMINPAGE: 0
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 1
 ISCONTEXTPLUGIN: 0
 MODULE_CATEGORY: assessment
 MODULE_STATUS: stable
-MODULE_VERSION: 1.550
+MODULE_VERSION: 1.551
+
+UPDATE_DESCRIPTION: [pwando] - Set access to only admin and lecturers
 UPDATE_DESCRIPTION: Added language item
 UPDATE_DESCRIPTION: Added modified deleted various clauses.
 UPDATE_DESCRIPTION: Added language items
@@ -28,10 +30,12 @@ DEPENDS: context
 DEPENDS: essay
 
 USE_GROUPS: Site Admin
+USE_GROUPS: Lecturers
 USE_CONTEXT_GROUPS: Lecturers
-CONDITION: isContextLecturer|isContextMember|Lecturers
+CONDITION: isContextLecturer|Lecturers
 CONDITION: isAdmin|isAdmin
 CONDITION: isMarker|hasPermission|Markers
+
 RULE: addtopic,edit,edittopic,delete,deletetopic,mark,marktopic,upload,addessay,editessay,deleteessay|isContextLecturer
 RULE: addtopic,edit,edittopic,delete,deletetopic,addessay,editessay,deleteessay|isAdmin
 RULE: mark,marktopic,upload|isMarker
