[pwando] - Added dependencies

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -17,6 +17,11 @@ UPDATE_DESCRIPTION: Added a clone of textblock module. Does not depend on classe
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 
+DEPENDS: textblock
+DEPENDS: blocks
+DEPENDS: modulecatalogue
+DEPENDS: postlogin
+
 MENU_CATEGORY: admin
 PAGE: admin_site
 MODULE_STATUS: beta
