Added bookmarks to the toobar

--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -26,6 +26,7 @@ USES: word_cancel|Cancel|Cancel
 USES: word_error|Error|Error
 USES: word_expand|Expand|Expand
 USES: word_collapse|Collapse|Collapse
+USES: word_success|Success|Success
 
 TEXT: mod_bookmarks_bookmarking|Bookmarking|Bookmarking
 TEXT: mod_bookmarks_folder|Folder|Folder
@@ -50,6 +51,7 @@ TEXT: mod_bookmarks_nosubfolders|No sub-folders|No sub-folders
 TEXT: mod_bookmarks_nofolderbookmarks|No bookmarks found in this folder|No bookmarks found in this folder
 TEXT: mod_bookmarks_bookmarkhome|Click on a folder to view the bookmarks in that folder|Click on a folder to view the bookmarks in that folder
 TEXT: mod_bookmarks_bookmarkname|Bookmark name|Bookmark name
+TEXT: mod_bookmarks_success|Your bookmark for this page has been successfully saved|Your bookmark for this page has been successfully saved.
 
 TEXT: mod_bookmarks_invalidaction|Invalid action|Invalid action
 TEXT: mod_bookmarks_actionerror|Action error|You have performed an invalid action or you have tried an action you are not authorised to perform
