--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,18 +3,13 @@ MODULE_NAME: Content blocks
 MODULE_DESCRIPTION: Content blocks for Chisimba. Does not depend on classes and has the option to use WYSWYG editor
 MODULE_AUTHORS: Paul Mungai
 MODULE_RELEASEDATE: 2012 03 25
-MODULE_VERSION: 0.004
+MODULE_VERSION: 0.005
 MODULE_PATH: contentblocks
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: contentblocks
 MODULE_CATEGORY: utility
-
-UPDATE_DESCRIPTION: [pwando] - contentblocks can now render class blocks or dynamic blocks stored in DB. Dropped dependency on textblocks
-UPDATE_DESCRIPTION: [pwando] - Set access to only admin
-UPDATE_DESCRIPTION: Added a clone of textblock module. Does not depend on classes and has the option to use WYSWYG editor.
-
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 
@@ -27,6 +22,10 @@ PAGE: admin_site
 MODULE_STATUS: beta
 
 TABLE: tbl_contentblocks
+
+UPDATE_DESCRIPTION: [pwando] - contentblocks now using simple htmlarea
+UPDATE_DESCRIPTION: [pwando] - contentblocks can now render class blocks or dynamic blocks stored in DB. Dropped dependency on textblock module
+UPDATE_DESCRIPTION: [pwando] - Set access to only admin
 
 TEXT: mod_contentblocks_title|Text block|Text block
 TEXT: mod_contentblocks_blocktext|Block contents|Block contents
