Added code to display error conditions with records in tbl_test_results.

--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -4,7 +4,7 @@ MODULE_STATUS: unstable
 MODULE_DESCRIPTION: The MCQ (multiple choice question) Test module allows [-authors-] to set up MCQ tests, define the a period of time when [-readonlys-] will be able to access the test and restrict the test to specific computer labs. The order of questions and answers can be scrambled so that no two [-readonlys-] will get a test with the questions and the answers in the same order.
 MODULE_AUTHORS: Megan Watson, Kevin Cyster, Paul Mungai, Nguni Phakela
 MODULE_RELEASEDATE: 2007 01 01
-MODULE_VERSION: 4.101
+MODULE_VERSION: 4.110
 MODULE_PATH: mcqtests
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -14,6 +14,7 @@ ISCONTEXTPLUGIN: 1
 MENU_CATEGORY: assessment
 PAGE: lecturer_assignment
 
+UPDATE_DESCRIPTION: Added code to display error conditions with records in tbl test results
 UPDATE_DESCRIPTION: [pwando] - Refactoring mcqtests wrt gradebook offline assignment uploads
 UPDATE_DESCRIPTION: Bug fix
 UPDATE_DESCRIPTION:  [jsc]   Workaround for some problems
