Changed to use the new jquerycore plugins

--- a/schoolusers/register.conf
+++ b/schoolusers/register.conf
@@ -11,7 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schoolusers
 MODULE_CATEGORY: schoolusers
 
-USE GROUPS: School Managers
+USE_GROUPS: School Managers
 
 TABLE: tbl_schoolusers_data
 
@@ -50,6 +50,8 @@ USES: title_dr|title dr|Dr
 USES: title_prof|title prof|Professor
 USES: title_rev|title rev|Rev
 USES: title_assocprof|title assocprof|Assoc Prof
+USES: title_sir|title Sir|Sir
+USES: title_dame|title Dame|Dame
 
 COMMENT: Common phrases
 USES: phrase_emailaddress|Email address|Email address
@@ -67,7 +69,7 @@ USES: phrase_finduser|Find user|Find user
 USES: phrase_listusers|List users|List users
 USES: phrase_userdetails|User details|User details
 USES: phrase_dateofbirth|Date of birth|Date of birth
-USES: phrase_postalcose|Postal code|Postal code
+USES: phrase_postalcode|Postal code|Postal code
 
 COMMENT: module text
 TEXT: mod_schoolusers_schoolusers|[-organisation-] users|[-organisation-] users
