added note operations class and language text

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -1,7 +1,7 @@
 MODULE_ID: mynotes
 MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
-MODULE_AUTHORS: Derek Keats
+MODULE_AUTHORS: Derek Keats, Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
 MODULE_VERSION: 0.001
 MODULE_PATH: mynotes
@@ -11,6 +11,8 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 
+UPDATE_DESCRIPTION: Added the not taking form
+
 TABLE: tbl_mynotes_text
 
 
@@ -18,3 +20,7 @@ MENU_CATEGORY: Developer
 WIDEBLOCK: mynotesmiddle
 BLOCK: mynotesleft
 BLOCK: mynotesright
+
+TEXT: mod_wall_entertext|Instructions to enter text|Enter your message here...
+TEXT: mod_wall_onlytext|Instructions to only insert text|No HTML, only links and text
+TEXT: mod_wall_share|The word share|Share
