Changed layout of chat, added classes for styling

--- a/messaging/register.conf
+++ b/messaging/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Chat
 MODULE_DESCRIPTION: This module provides both instant messaging and chat functionality. In messaging mode, when a message is sent, the module checks if the recipient is logged on. If the recipient is logged on a popup will appear with the relevant message. If the recipient is not logged on the message will be queued until the next time the user logs on. In chat mode it will provide "realtime" chat using timed asyncronous requests to the server. It is [-context-] aware and has chat rooms for each [-context-]. It has moderators and the ability to ban selected users permanently or for a specified time.  it also has private chat rooms for users. It uses the scriptaculous javascript libraries to make asyncronous requests to the server.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: 2007 03 01
-MODULE_VERSION: 1.120
+MODULE_VERSION: 1.121
 MODULE_PATH: messaging
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -16,6 +16,7 @@ SIDEMENU: elearnpostlogin-2
 CONFIG: DISPLAY_IM|TRUE|mod_messaging_paramdesc_1
 CONFIG: DISPLAY_CHAT|TRUE|mod_messaging_paramdesc_2
 
+UPDATE_DESCRIPTION: [DWK] Changed layout of chat, added classes for styling
 UPDATE_DESCRIPTION: Changed loading of scriptaculous to the prototype
 UPDATE_DESCRIPTION: Added scriptaculous to this module since it is no longer loaded by default
 
