Fixed potential bug wrt buttons and i18n

--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: bookmarks
 MODULE_DESCRIPTION: Manage bookmarking within the system
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 28, 2012, 12:34 pm
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: bookmarks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -17,6 +17,8 @@ TABLE: tbl_bookmarks_folders
 MENU_CATEGORY: Developer
 
 BLOCK: bookmarks
+
+UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 
 USES: word_add|Add|Add
 USES: word_edit|Edit|Edit
