Fixed potential bug wrt buttons and i18n

--- a/schools/register.conf
+++ b/schools/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-organisations-]
 MODULE_DESCRIPTION: Simple facility to store school basic data
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 10, 2012, 3:20 pm
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: schools
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -20,6 +20,8 @@ MENU_CATEGORY: Developer
 
 USE_GROUPS: Principals
 USE GROUPS: School Managers
+
+UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 
 WIDEBLOCK: schoolsfind
 WIDEBLOCK: schoolsaddedit
