Fixed potential bug wrt buttons and i18n

--- a/schoolusers/register.conf
+++ b/schoolusers/register.conf
@@ -13,6 +13,8 @@ MODULE_CATEGORY: schoolusers
 
 USE_GROUPS: School Managers
 
+DEPENDS: schools
+
 TABLE: tbl_schoolusers_data
 
 MENU_CATEGORY: Developer
@@ -35,9 +37,8 @@ USES: word_username|The word username|Username
 USES: word_password|The word password|Password
 USES: word_male|The word male|Male
 USES: word_female|The word female|Female
-USES: word_title|The word title|Title
 USES: word_actions|The word action|Actions
-USES: word_list|The word list|The word list
+USES: word_list|The word list|List
 USES: word_city|City|City
 USES: word_state|State|State
  
