Added dependency to jquerycore

--- a/schools/register.conf
+++ b/schools/register.conf
@@ -3,13 +3,17 @@ MODULE_NAME: [-organisations-]
 MODULE_DESCRIPTION: Simple facility to store school basic data
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 10, 2012, 3:20 pm
-MODULE_VERSION: 0.002
+MODULE_VERSION: 0.003
 MODULE_PATH: schools
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schools
 MODULE_CATEGORY: schools
+
+UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
+
+DEPENDS: jquerycore
 
 TABLE: tbl_schools_provinces
 TABLE: tbl_schools_districts
