--- a/schoolusers/register.conf
+++ b/schoolusers/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-organisation-] user data
 MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required for managing [-organisations-] on the system. It can also be useful to any other project that needs this extra data.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 21, 2012, 9:18 pm
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: schoolusers
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,9 +11,12 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schoolusers
 MODULE_CATEGORY: schoolusers
 
-USE_GROUPS: School Managers
+UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 
 DEPENDS: schools
+DEPENDS: jquerycore
+
+USE_GROUPS: School Managers
 
 TABLE: tbl_schoolusers_data
 
