--- a/schools/register.conf
+++ b/schools/register.conf
@@ -1,6 +1,6 @@
 MODULE_ID: schools
 MODULE_NAME: [-organisations-]
-MODULE_DESCRIPTION: Simple facility to store school basic data
+MODULE_DESCRIPTION: Simple facility to store [-organisation-] basic data
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 10, 2012, 3:20 pm
 MODULE_VERSION: 0.003
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schools
 MODULE_CATEGORY: schools
 
+UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 
 DEPENDS: jquerycore
@@ -24,8 +25,6 @@ MENU_CATEGORY: Developer
 
 USE_GROUPS: Principals
 USE GROUPS: School Managers
-
-UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 
 WIDEBLOCK: schoolsfind
 WIDEBLOCK: schoolsaddedit
