--- a/contentblocks/register.conf
+++ b/contentblocks/register.conf
@@ -27,27 +27,27 @@ UPDATE_DESCRIPTION: [pwando] - contentblocks now using simple htmlarea
 UPDATE_DESCRIPTION: [pwando] - contentblocks can now render class blocks or dynamic blocks stored in DB. Dropped dependency on textblock module
 UPDATE_DESCRIPTION: [pwando] - Set access to only admin
 
-TEXT: mod_contentblocks_title|Text block|Text block
+TEXT: mod_contentblocks_title|content block|content block
 TEXT: mod_contentblocks_blocktext|Block contents|Block contents
-TEXT: mod_contentblocks_addtitle|The phrase Add text block|Add text block
-TEXT: mod_contentblocks_edittitle|The phrase Edit text block|Edit text block
-TEXT: mod_contentblocks_del|The words Delete text block|Delete text block
-TEXT: mod_contentblocks_conf|The phrase Are you sure you want to delete this text block|Are you sure you want to delete this text block
+TEXT: mod_contentblocks_addtitle|The phrase Add content block|Add content block
+TEXT: mod_contentblocks_edittitle|The phrase Edit content block|Edit content block
+TEXT: mod_contentblocks_del|The words Delete content block|Delete content block
+TEXT: mod_contentblocks_conf|The phrase Are you sure you want to delete this content block|Are you sure you want to delete this content block
 TEXT: mod_contentblocks_cancel|The word Cancel|Cancel
-TEXT: mod_contentblocks_addnew|The phrase Add New text block|Add New text block
+TEXT: mod_contentblocks_addnew|The phrase Add New content block|Add New content block
 TEXT: mod_contentblocks_action|The word Action|Action
 TEXT: mod_contentblocks_quote|The word block|Block
 TEXT: mod_contentblocks_datecreated|The phrase Date Created|Date Created
 TEXT: mod_contentblocks_createdby|The phrase Created By|Created By
 TEXT: mod_contentblocks_datemodified|The phrase Date Modified|Date Modified
 TEXT: mod_contentblocks_modifiedby|The phrase Modified By|Modified By
-TEXT: mod_contentblocks_leftside|Instructions for the left column|Select a text block to edit or delete, or click the add link to add a new text block.
-TEXT: mod_contentblocks_title|Manage database of text blocks|Manage database of text blocks
+TEXT: mod_contentblocks_leftside|Instructions for the left column|Select a content block to edit or delete, or click the add link to add a new content block.
+TEXT: mod_contentblocks_title|Manage database of content blocks|Manage database of content blocks
 TEXT: mod_contentblocks_datanotfound|Message to display when data are not found for a user|Data not found for user
-TEXT: mod_contentblocks_nocontent|Message to display when block has no content|The text block has no contents. The site administrator needs to add contents to this text block or remove it from the display.
-TEXT: mod_contentblocks_heading_text|Text block|Side block
-TEXT: mod_contentblocks_heading_widetext|Wide text block|Wide block
-TEXT: mod_contentblocks_block_leftnav_title|Navigate text blocks|Navigate text blocks
+TEXT: mod_contentblocks_nocontent|Message to display when block has no content|The content block has no contents. The site administrator needs to add contents to this content block or remove it from the display.
+TEXT: mod_contentblocks_heading_text|content block|Side block
+TEXT: mod_contentblocks_heading_widetext|Wide content block|Wide block
+TEXT: mod_contentblocks_block_leftnav_title|Navigate content blocks|Navigate content blocks
 TEXT: mod_contentblocks_block_howto_title|How to see blocks|How to see blocks
 TEXT: mod_contentblocks_block_howto|Content explaining how to navigate blocks|Click the title of the block to view the contents. The contents of the bloc will drop down. To hid the contents, click the title again to toggle the block closed. Click the edit or delete icon to edit or delete the block. To add a block, click the green plus icon after the page title.
 TEXT: mod_contentblocks_block_howtoed_title|How to edit|How to edit
@@ -62,5 +62,5 @@ TEXT: mod_contentblocks_show_title|Label for the show title checkbox|Show the ti
 TEXT: mod_contentblocks_titlereq|You must enter a title|You must enter a title
 
 COMMENT: help elements
-TEXT: help_contentblocks_about|About Text Block|The management of text blocks displayed on the any pages supporting text blocks.
-TEXT: help_contentblocks_about_title|Title for about|About Text blocks
+TEXT: help_contentblocks_about|About content block|The management of content blocks displayed on the any pages supporting content blocks.
+TEXT: help_contentblocks_about_title|Title for about|About content blocks
