[pwando] - Modified language elements

--- a/contentblocks/register.conf
+++ b/contentblocks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Content blocks
 MODULE_DESCRIPTION: Content blocks for Chisimba. Does not depend on classes and has the option to use WYSWYG editor
 MODULE_AUTHORS: Paul Mungai
 MODULE_RELEASEDATE: 2012 03 25
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.006
 MODULE_PATH: contentblocks
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 0
@@ -23,6 +23,7 @@ MODULE_STATUS: beta
 
 TABLE: tbl_contentblocks
 
+UPDATE_DESCRIPTION: [pwando] - Removed unecessary call to textblock module & modified language elements
 UPDATE_DESCRIPTION: [pwando] - contentblocks now using simple htmlarea
 UPDATE_DESCRIPTION: [pwando] - contentblocks can now render class blocks or dynamic blocks stored in DB. Dropped dependency on textblock module
 UPDATE_DESCRIPTION: [pwando] - Set access to only admin
