--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Derek Keats, Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.007
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,10 +11,11 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 
-UPDATE_DESCRIPTION: Added the not taking form
+UPDATE_DESCRIPTION: Added language elements
+UPDATE_DESCRIPTION: Added content word for WYSIWYG form
+UPDATE_DESCRIPTION: Added the note taking form
 
 TABLE: tbl_mynotes_text
-
 
 MENU_CATEGORY: Developer
 WIDEBLOCK: mynotesmiddle
@@ -24,3 +25,13 @@ BLOCK: mynotesright
 TEXT: mod_wall_entertext|Instructions to enter text|Enter your message here...
 TEXT: mod_wall_onlytext|Instructions to only insert text|No HTML, only links and text
 TEXT: mod_wall_share|The word share|Share
+TEXT: mod_mynotes_allnotes|The words all notes|My notes
+TEXT: mod_mynotes_addnote|The words to add notes|Add a note
+TEXT: mod_mynotes_editnote|The words to edit a note|Edit a note
+TEXT: mod_mynotes_notetitle|The words note title|Title
+TEXT: mod_mynotes_notetag|The words tags|Tags
+TEXT: mod_mynotes_noteeditor|The words content|Content
+TEXT: mod_mynotes_notecontentname|Note Editor Name|noteContent
+TEXT: mod_mynotes_validateaddednote|Validate an added note|Validate Added Note
+TEXT: mod_mynotes_validateeditednote|Validate an edited note|Validate Edited Note
+TEXT: mod_mynotes_confirm|The Word Confirm|Confirm
