[pwando] Added content blocks to news module

--- a/news/register.conf
+++ b/news/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: news
 MODULE_NAME: News
 MODULE_DESCRIPTION: This is an online news management and publishing system. It allows admins to setup categories, each category can have one of multiple views. It also integrates with Google Maps and a timeline view of news.
-MODULE_AUTHORS: Tohir Solomons, Paul Scott minor changes by David Wafula
+MODULE_AUTHORS: Tohir Solomons, Paul Scott, David Wafula, Paul Mungai
 MODULE_RELEASEDATE: 2007 12 14
-MODULE_VERSION: 2.364
+MODULE_VERSION: 2.365
 MODULE_PATH: news
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,6 +19,7 @@ PAGE: admin_site
 
 MODULE_CATEGORY: news
 
+UPDATE_DESCRIPTION: [pwando] Added content blocks
 UPDATE_DESCRIPTION: Removed hard coded styles and hard breaks
 UPDATE_DESCRIPTION: Fixed geolocation not working in edit/add mode for news story
 UPDATE_DESCRIPTION: New lang item added
