--- a/personalspace/register.conf
+++ b/personalspace/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: personalspace
 MODULE_NAME: My Work Space
 MODULE_DESCRIPTION: Manages the user's personal details.
-MODULE_AUTHORS: Tohir Solomons
+MODULE_AUTHORS: Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 06 02
-MODULE_VERSION: 1.006
+MODULE_VERSION: 1.007
 MODULE_PATH: personalspace
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -20,6 +20,7 @@ DEPENDS_CONTEXT: 0
 
 TABLE: tbl_personalspace_blocks
 
+UPDATE_DESCRIPTION: [pwando] Added content blocks
 UPDATE_DESCRIPTION: [DWK] Changed editmode button to the one from dynamic canvas
 UPDATE_DESCRIPTION: Fixed missing livequery
 
