added db class for tags and sql file, ajax request for mynotes

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Derek Keats, Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.007
+MODULE_VERSION: 0.008
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,11 +11,13 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 
+UPDATE_DESCRIPTION: Added tags table
 UPDATE_DESCRIPTION: Added language elements
 UPDATE_DESCRIPTION: Added content word for WYSIWYG form
 UPDATE_DESCRIPTION: Added the note taking form
 
 TABLE: tbl_mynotes_text
+TABLE: tbl_mynotes_tags
 
 MENU_CATEGORY: Developer
 WIDEBLOCK: mynotesmiddle
