added tag cloud, searching based on tag, edit a tag, delete a tag, css for tag styling

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Derek Keats, Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.008
+MODULE_VERSION: 0.010
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 
+UPDATE DESCRIPTION: Added search results language elements
 UPDATE_DESCRIPTION: Added tags table
 UPDATE_DESCRIPTION: Added language elements
 UPDATE_DESCRIPTION: Added content word for WYSIWYG form
@@ -37,3 +38,5 @@ TEXT: mod_mynotes_notecontentname|Note Editor Name|noteContent
 TEXT: mod_mynotes_validateaddednote|Validate an added note|Validate Added Note
 TEXT: mod_mynotes_validateeditednote|Validate an edited note|Validate Edited Note
 TEXT: mod_mynotes_confirm|The Word Confirm|Confirm
+TEXT: mod_mynotes_tags|The Word Tags|My Tags
+TEXT: mod_mynotes_searchresults|The words Search Results|Search Results
