Downgraded to Alpha as it is broken due to a dependency on a deprecated module.

--- a/eportfolio/register.conf
+++ b/eportfolio/register.conf
@@ -3,8 +3,8 @@ MODULE_NAME: eportfolio
 MODULE_DESCRIPTION: eportfolio module allows users to create and update their own eportfolio. A portfolio is a collection of evidence that acts as an example of one's work when one needs to show proof of their competency. ePortfolio is acronym for 'electronic portfolio'.
 MODULE_AUTHORS: Paul Mungai
 MODULE_RELEASEDATE: 2007 10 17
-MODULE_VERSION: 4.407
-MODULE_STATUS: stable
+MODULE_VERSION: 4.408
+MODULE_STATUS: alpha
 MODULE_PATH: eportfolio
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
