[pwando] - removed dependency on deprecated  contextpostlogin module. Fixed errors

--- a/eportfolio/register.conf
+++ b/eportfolio/register.conf
@@ -4,7 +4,7 @@ MODULE_DESCRIPTION: eportfolio module allows users to create and update their ow
 MODULE_AUTHORS: Paul Mungai
 MODULE_RELEASEDATE: 2007 10 17
 MODULE_VERSION: 4.408
-MODULE_STATUS: alpha
+MODULE_STATUS: beta
 MODULE_PATH: eportfolio
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_HASADMINPAGE: TEXT
 MODULE_LANGTERMS: eportfolio
 TAGS: ePortfolio
 
+UPDATE_DESCRIPTION: [pwando] - removed dependency on deprecated  contextpostlogin module. Fixed errors.
 UPDATE_DESCRIPTION: [pwando] Fixed undefined variables on view others portfolio
 UPDATE_DESCRIPTION: [pwando] Changed group title in add/modify group users
 UPDATE_DESCRIPTION: [pwando] Fixed bug in view others portfolio
