--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Derek Keats, Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.010
+MODULE_VERSION: 0.011
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,11 +11,12 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 
-UPDATE DESCRIPTION: Added search results language elements
-UPDATE_DESCRIPTION: Added tags table
-UPDATE_DESCRIPTION: Added language elements
-UPDATE_DESCRIPTION: Added content word for WYSIWYG form
-UPDATE_DESCRIPTION: Added the note taking form
+UPDATE_DESCRIPTION: Added language elements [nguni]
+UPDATE DESCRIPTION: Added search results language elements [nguni]
+UPDATE_DESCRIPTION: Added tags table [nguni]
+UPDATE_DESCRIPTION: Added language elements [nguni]
+UPDATE_DESCRIPTION: Added content word for WYSIWYG form [nguni]
+UPDATE_DESCRIPTION: Added the note taking form [nguni]
 
 TABLE: tbl_mynotes_text
 TABLE: tbl_mynotes_tags
@@ -40,3 +41,5 @@ TEXT: mod_mynotes_validateeditednote|Validate an edited note|Validate Edited Not
 TEXT: mod_mynotes_confirm|The Word Confirm|Confirm
 TEXT: mod_mynotes_tags|The Word Tags|My Tags
 TEXT: mod_mynotes_searchresults|The words Search Results|Search Results
+TEXT: mod_mynotes_readmore|The words Read More|Read More
+TEXT: mod_mynotes_viewnote|The words View All Notes|View All Notes
