added utility methods, table updates, next and previous methods for list of notes

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Derek Keats, Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.011
+MODULE_VERSION: 0.013
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -43,3 +43,5 @@ TEXT: mod_mynotes_tags|The Word Tags|My Tags
 TEXT: mod_mynotes_searchresults|The words Search Results|Search Results
 TEXT: mod_mynotes_readmore|The words Read More|Read More
 TEXT: mod_mynotes_viewnote|The words View All Notes|View All Notes
+TEXT: mod_mynotes_prev|The word previous|Previous
+TEXT: mod_mynotes_next|The word next|Next
