--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.369
+MODULE_VERSION: 0.370
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,9 +18,11 @@ DEPENDS:mail
 DEPENDS:context
 DEPENDS:utilities
 
-MODULE_STATUS: stable
+MODULE_STATUS: beta
+
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [DWK] Changed it back to beta as there are seven reported bugs
 UPDATE_DESCRIPTION: [DWK] Moved it to the Resources menu as it was the only thing on Communication
 UPDATE_DESCRIPTION: [DWK] Changed to stable and fixed hard codes word 'course'
 UPDATE_DESCRIPTION: Changed language element
