Put back missing security rules and requireslogin stuff

--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.370
+MODULE_VERSION: 0.371
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,11 +18,12 @@ DEPENDS:mail
 DEPENDS:context
 DEPENDS:utilities
 
-MODULE_STATUS: beta
+MODULE_STATUS: alpha
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
-UPDATE_DESCRIPTION: [DWK] Changed it back to beta as there are seven reported bugs
+UPDATE_DESCRIPTION: [DWK] Put back missing security rules and requireslogin stuff
+UPDATE_DESCRIPTION: [DWK] Changed it back to alpha as there are seven reported bugs
 UPDATE_DESCRIPTION: [DWK] Moved it to the Resources menu as it was the only thing on Communication
 UPDATE_DESCRIPTION: [DWK] Changed to stable and fixed hard codes word 'course'
 UPDATE_DESCRIPTION: Changed language element
@@ -43,10 +44,12 @@ TABLE: tbl_announcements_context
 BLOCK: latestannouncement
 BLOCK: latestcontextannouncement
 BLOCK: announcementquickadd
-//BLOCK: quickaddcontext|context
 
-//RULE: edit,delete|isAdmin
-
+//SECURITY RULES - DO NOT REMOVE ON PAIN OF HDQ
+CONDITION: isadmin|isAdmin
+CONDITION: iscontextlecturer|isContextMember|Lecturers
+RULE: edit,add,delete,save|iscontextlecturer
+RULE: edit,add,delete,save|isadmin
 
 TEXT: help_announcements_emailtitle|Email subject|Important announcement
 TEXT: help_announcements_emailbody1|Email body part 1|has posted an important new announcement titled
