--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.371
+MODULE_VERSION: 0.372
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -22,6 +22,7 @@ MODULE_STATUS: alpha
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [DWK] Fixed numerous bugs, including repetition in listing announcements
 UPDATE_DESCRIPTION: [DWK] Put back missing security rules and requireslogin stuff
 UPDATE_DESCRIPTION: [DWK] Changed it back to alpha as there are seven reported bugs
 UPDATE_DESCRIPTION: [DWK] Moved it to the Resources menu as it was the only thing on Communication
