--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.372
+MODULE_VERSION: 0.373
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,7 +18,7 @@ DEPENDS:mail
 DEPENDS:context
 DEPENDS:utilities
 
-MODULE_STATUS: alpha
+MODULE_STATUS: stable
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
