Added styles for improved rendering on different skins, marked it stable after extensive testing

--- a/assignment/register.conf
+++ b/assignment/register.conf
@@ -3,13 +3,13 @@ MODULE_NAME: Assignments
 MODULE_DESCRIPTION: Assignments enable students to view a list of booked assignments. The status is displayed indicating whether it is open, closed or if the student has submitted. The mark is shown once it has been marked.A new assignment can be opened for answering. Students can complete the assignment if its online and submit it. An uploadable or offline assignment can be completed and then loaded into the database. A marked assignment can be opened and the lecturer's comment can be viewed.
 MODULE_AUTHORS: Megan Watson, yasser buchana, Jameel Adam, Paul Mungai, Jeremy OConnor
 MODULE_RELEASEDATE: 2005 01 14
-MODULE_VERSION: 0.612
+MODULE_VERSION: 0.613
 MODULE_PATH: assignment
 MODULE_LANGTERMS: assignment
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
-MODULE_STATUS: beta
+MODULE_STATUS: stable
 MENU_CATEGORY: assessment
 MODULE_CATEGORY: assessment
 CONTEXT_AWARE: 1
@@ -21,6 +21,7 @@ DEPENDS: groupadmin
 DEPENDS: context
 DEPENDS: dhtmlgoodies
 
+UPDATE_DESCRIPTION: [dwk] Added styles for improved rendering on different skins
 UPDATE_DESCRIPTION: [pwando] - Refactoring assignment wrt gradebook offline assignment uploads
 UPDATE_DESCRIPTION: Modification to functionality for downloading of all assignments as a ZIP file
 UPDATE_DESCRIPTION: Fixed downloading of all assignments as a ZIP file
