--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,17 +3,18 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.530
+MODULE_VERSION: 1.531
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Calendar
 MODULE_CATEGORY: workgroups
-MODULE_STATUS: alpha
+MODULE_STATUS: stable
 
 MENU_CATEGORY: user
 
+UPDATE_DESCRIPTION: [dwk] Tested and marked it stable, added a few style elements
 UPDATE_DESCRIPTION: Added wrapper div and classes to the links that appear under the calendar wideblock
 UPDATE_DESCRIPTION: Added support for groups from unesco_oer
 UPDATE_DESCRIPTION: fixed display and added modal links
