--- a/calendarbase/register.conf
+++ b/calendarbase/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar Base Module
 MODULE_DESCRIPTION: This module holds the core classes and functionality for calendar and event management that allows it to be shared between user, context and workgroup. It also holds some classes for generating calendars. It is not a module that is directly accessible by users, though some modules depended on it. There are plans to deprecate it in favour of the eventscalendar module.
 MODULE_AUTHORS: Tohir Solomons modification by David wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.108
+MODULE_VERSION: 1.109
 MODULE_PATH: calendarbase
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,13 +11,15 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Calendarbase
 MODULE_CATEGORY: base
 
-MODULE_STATUS: alpha
+MODULE_STATUS: stable
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
 
 TABLE: tbl_calendar
 TABLE: tbl_calendar_event_attachment
 TABLE: tbl_calendar_temp_attachment
+
+UPDATE_DESCRIPTION: [dwk] Tested and marked it stable, added a few style elements
 
 
 TEXT: mod_calendarbase_someonescalendar|Phrase to identify who calendar belongs to|Calendar for [someone]
