--- a/essayadmin/register.conf
+++ b/essayadmin/register.conf
@@ -13,8 +13,9 @@ DEPENDS_CONTEXT: 1
 ISCONTEXTPLUGIN: 0
 MODULE_CATEGORY: assessment
 MODULE_STATUS: stable
-MODULE_VERSION: 1.552
+MODULE_VERSION: 1.553
 
+UPDATE_DESCRIPTION: [dwk] Added divs to make it stylable
 UPDATE_DESCRIPTION: [pwando] - Set access to only admin and lecturers
 UPDATE_DESCRIPTION: Added language item
 UPDATE_DESCRIPTION: Added modified deleted various clauses.
