Cleaned up a lot of cat vomit and added styles

--- a/faq/register.conf
+++ b/faq/register.conf
@@ -6,7 +6,7 @@ MODULE_NAME: FAQ
 MODULE_DESCRIPTION: The FAQ plugin allows users to create a list of frequently asked questions. Questions and their answers are organised in user-defined categories.
 MODULE_AUTHORS: Jeremy OConnor altered by Stelio Macumbe,David wafula
 MODULE_RELEASEDATE: 2004 07 28
-MODULE_VERSION: 2.612
+MODULE_VERSION: 2.613
 MODULE_PATH: faq
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
@@ -17,12 +17,13 @@ MODULE_ISADMIN: 0
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 ISCONTEXTPLUGIN: 1
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: beta
 PAGE: admin_organise||faq
 PAGE: lecturer_organise||faq
 
 CONFIG: mod_faq_limited_users|0|mod_faq_limited_users
 
+UPDATE_DESCRIPTION: [dwk] Cleaned up some cat vomit and added elements for styling
 UPDATE_DESCRIPTION: Updated edit permissions
 UPDATE_DESCRIPTION: Associated tags with contextcode
 UPDATE_DESCRIPTION: Updated module description
