Added divs to facilitate skin building

--- a/gradebook/register.conf
+++ b/gradebook/register.conf
@@ -3,12 +3,12 @@ MODULE_NAME: Grade Book
 MODULE_DESCRIPTION: Centralized grades repository
 MODULE_AUTHORS: Otim Samuel, Abdurahim Shariff (Ported to Chisimba), Paul Mungai
 MODULE_RELEASEDATE: 2005 06 13
-MODULE_VERSION: 1.441
+MODULE_VERSION: 1.443
 MODULE_PATH: gradebook
 MODULE_STATUS: beta
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
-
+UPDATE_DESCRIPTION: [dwk] Added divs to facilitate skin building
 UPDATE_DESCRIPTION:fixed bug #3779
 MODULE_CATEGORY: assessment
 MENU_CATEGORY: assessment
