Marked it stable, but it needs more real life testing.

--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -1,10 +1,10 @@
 MODULE_ID: mcqtests
 MODULE_NAME: MCQ Tests
-MODULE_STATUS: unstable
+MODULE_STATUS: stable
 MODULE_DESCRIPTION: The MCQ (multiple choice question) Test module allows [-authors-] to set up MCQ tests, define the a period of time when [-readonlys-] will be able to access the test and restrict the test to specific computer labs. The order of questions and answers can be scrambled so that no two [-readonlys-] will get a test with the questions and the answers in the same order.
 MODULE_AUTHORS: Megan Watson, Kevin Cyster, Paul Mungai, Nguni Phakela
 MODULE_RELEASEDATE: 2007 01 01
-MODULE_VERSION: 4.112
+MODULE_VERSION: 4.113
 MODULE_PATH: mcqtests
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
