Added styles for skinning

--- a/rubric/register.conf
+++ b/rubric/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Rubrics
 MODULE_DESCRIPTION: Implements rubrics for marking submissions. Allows lecturers to manage rubrics and allows students to view rubrics.
 MODULE_AUTHORS: Jeremy OConnor
 MODULE_RELEASEDATE: 2004 09 02
-MODULE_VERSION: 2.596
+MODULE_VERSION: 2.598
 MODULE_PATH: rubric
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
@@ -20,6 +20,7 @@ CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 1
 ISCONTEXTPLUGIN: 1
 
+UPDATE_DESCRIPTION: [dwk] Added styles for skinning and cleaned up cat vomit
 UPDATE_DESCRIPTION: Fixed bug and changed dropdown display and added sorting for dropdown
 UPDATE_DESCRIPTION: Removed unnecessary call to skin for deprecated empty method
 UPDATE_DESCRIPTION: Renamed column Student No to Username/Student no on view assesments
