Marked it alpha as it is not working at all.

--- a/tutorials/register.conf
+++ b/tutorials/register.conf
@@ -1,10 +1,10 @@
 MODULE_ID: tutorials
 MODULE_NAME: Interactive tutorials
-MODULE_STATUS: beta
+MODULE_STATUS: alpha
 MODULE_DESCRIPTION: This module provides for the lecturer to create and mark worksheets which are either interactive or standard. It also allows for late submissions and audit trails.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: 2008 07 01
-MODULE_VERSION: 1.04
+MODULE_VERSION: 1.041
 MODULE_PATH: tutorials
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -29,6 +29,7 @@ TABLE: tbl_tutorials_results
 TABLE: tbl_tutorials_marking
 TABLE: tbl_tutorials_marker
 
+UPDATE_DESCRIPTION: [dwk] Marked it alpha as it is not working
 UPDATE_DESCRIPTION: Changed private properties to public
 
 COMMENT: Lecturer home
