--- a/markitup/register.conf
+++ b/markitup/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: markitup
 MODULE_DESCRIPTION: Provides a holding point and some limited abstractions for markitup wiki editor. Has no end-user functionality and should not be added to a menu.
 MODULE_AUTHORS: Refactored from htmlelements by Derek Keats
 MODULE_RELEASEDATE: 2010 01 23
-MODULE_VERSION: 0.02
+MODULE_VERSION: 0.03
 MODULE_PATH: markitup
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -12,4 +12,5 @@ MODULE_CATEGORY: packages
 MODULE_STATUS: stable
 TAGS: wiki,editor
 
+UPDATE_DESCRIPTION: [dwk] Removed the preview button which doesn't work in Chisimba.
 TEXT: mod_markitup_error_illegalset|Error when an illegal set is used with markitup|An illegal set was supplied to the markitup object. Markit up is the markup editor used in the Wiki module and possibly other modules that benefit from markup buttons without a full WYSWYG editor. The requested markup set was
