Added some divs to facilitate skinning

--- a/wiki/register.conf
+++ b/wiki/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Wiki
 MODULE_DESCRIPTION: A wiki is a website that allows visitors to add, remove, and edit content. This ease of interaction and operation makes a wiki an effective tool for mass collaborative authoring.  A wiki enables documents to be written collaboratively, in a simple markup language using a web browser. A single page in a wiki is referred to as a "wiki page", while the entire body of pages, which are usually highly interconnected via hyperlinks, is "the wiki". A wiki is essentially a database for creating, browsing and searching information.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: 2007 06 01
-MODULE_VERSION: 1.706
+MODULE_VERSION: 1.707
 MODULE_PATH: wiki
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
@@ -13,6 +13,7 @@ MODULE_STATUS: stable
 BLOCK: wiki
 DEPENDS: markitup
 
+UPDATE_DESCRIPTION: [dwk] Added some divs to facilitate skinning
 UPDATE_DESCRIPTION: Factored markitup out of HTML elements.
 UPDATE_DESCRIPTION: Added max-width CSS property to drop-down.
 
@@ -37,7 +38,7 @@ COMMENT: Help System
 TEXT: help_wiki_title_add_page|title for help page for add page|Adding a Wiki Page
 TEXT: help_wiki_overview_add_page|overview for help page for add page|Start by adding a name to the page that you are creating. Please note that name must be in CamelCase. Thereafter you can add the summary and the content of the page in the fields provided. Your final step is to click on the "Create Page" button after you have made sure that all the necessary details have been added.
 TEXT: help_wiki_title_view_page|title for wiki help page|Viewing Pages
-TEXT: help_wiki_overview_view_page|overview for wiki help page|A wiki invites all users to edit any page or to create new pages within the wiki Web site. A wiki is not a carefully crafted site for casual visitors, instead it seeks to involve the visitor in an ongoing process of creation and collaboration that constantly changes the Web site landscape. The wiki navigation can be found in the left hand column. Users can also search the wiki using the search box below the navigation. The tabs on the page view allow the user to read the artcile, edit it, view its history or discuss it. Wiki pages can also be ranked from very bad to very good using the voting system. 
+TEXT: help_wiki_overview_view_page|overview for wiki help page|A wiki invites all users to edit any page or to create new pages within the wiki Web site. A wiki is not a carefully crafted site for casual visitors, instead it seeks to involve the visitor in an ongoing process of creation and collaboration that constantly changes the Web site landscape. The wiki navigation can be found in the left hand column. Users can also search the wiki using the search box below the navigation. The tabs on the page view allow the user to read the artcile, edit it, view its history or discuss it. Wiki pages can also be ranked from very bad to very good using the voting system.
 TEXT: help_wiki_title_view_all|title for wiki help page|View All Pages
 TEXT: help_wiki_overview_view_all|overview for wiki help page|This screen shows all the pages available on the current wiki, along with their authors and their dates of creation. Users can click on the titles to access the pages. The summary tab lists each article along with a short summary.
 TEXT: help_wiki_title_search_wiki|title for wiki help page|Search Wiki
@@ -62,7 +63,7 @@ TEXT: mod_wiki_maintitle|Click here to see the main wiki page|Click here to see 
 TEXT: mod_wiki_view|View all wiki pages|View all wiki pages
 TEXT: mod_wiki_viewtitle|Click here to see a list of all wiki pages|Click here to see a list of all wiki pages
 TEXT: mod_wiki_add|Add a wiki page|Add a wiki page
-TEXT: mod_wiki_addtitle|Click here to add a new wiki page|Click here to add a new wiki page 
+TEXT: mod_wiki_addtitle|Click here to add a new wiki page|Click here to add a new wiki page
 TEXT: mod_wiki_format|Formatting rules|Formatting rules
 TEXT: mod_wiki_formattitle|Click here to see the wiki formatting rules|Click here to see the wiki formatting rules
 USES: word_search|Search|Search
@@ -81,7 +82,7 @@ TEXT: mod_wiki_authorstitle|Click here to see a list of all authors to this wiki
 TEXT: mod_wiki_viewranking|View page ranking|View page ranking
 TEXT: mod_wiki_rankingtitle|Click here to see how the pages are ranked in this wiki|Click here to see how the pages are ranked in this wiki
 TEXT: mod_wiki_watchlist|View your watchlist|View your watchlist
-TEXT: mod_wiki_watchlisttitle|Click here to see your watchlist|Click here to see your watchlist 
+TEXT: mod_wiki_watchlisttitle|Click here to see your watchlist|Click here to see your watchlist
 TEXT: mod_wiki_newwikialert|Just created wiki|Just created wiki
 TEXT: mod_wiki_updatedwikialert|Just updated this wiki|Just updated this wiki
 
@@ -128,7 +129,7 @@ USES: word_overwritten|Overwritten|Overwritten
 TEXT: mod_wiki_restoration|Restoration of page version [-num-]|Restoration of page version [-num-]
 USES: word_original|Original|Original
 USES: word_restore|Restore|Restore
-TEXT: mod_wiki_restoretitle|Click here to restore this page|Click here to restore this page 
+TEXT: mod_wiki_restoretitle|Click here to restore this page|Click here to restore this page
 TEXT: mod_wiki_restoreconfirm|All edits after this version will be lost. Are you sure you want to restore this page?|All edits after this version will be lost. Are you sure you want to restore this page?
 TEXT: mod_wiki_addarticle|Add article|Add article
 TEXT: mod_wiki_listarticles|Article list|Article list
@@ -142,7 +143,7 @@ TEXT: mod_wiki_deletedpage_4|Edit the referring page and delete the page link|Ed
 USES: word_deleted|Deleted|Deleted
 TEXT: mod_wiki_deletedarticle|Deleted article|Deleted article
 USES: word_reinstate|Reinstate|Reinstate
-TEXT: mod_wiki_reinstatetitle|Click here to reinstate this page|Click here to reinstate this page 
+TEXT: mod_wiki_reinstatetitle|Click here to reinstate this page|Click here to reinstate this page
 TEXT: mod_wiki_reinstatement|Reinstatement of page version [-num-]|Reinstatement of page version [-num-]
 TEXT: mod_wiki_reinstateconfirm|Are you sure you want to reinstate this page?|Are you sure you want to reinstate this page?
 USES: word_reinstated|Reinstated|Reinstated
