Fixed a few bugs and added divs for styling

--- a/wall/register.conf
+++ b/wall/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Wall
 MODULE_DESCRIPTION: A simple wall module that makes use of OEMBED and that tries to look a bit like Facebook's wall
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.064
+MODULE_VERSION: 0.067
 MODULE_PATH: wall
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -28,6 +28,8 @@ WIDEBLOCK: genericwall
 TABLE: tbl_wall_posts
 TABLE: tbl_wall_comments
 
+UPDATE_DESCRIPTION: [dwk] Fixed a few bugs and added divs for styling
+UPDATE_DESCRIPTION: [dwk] Fixed button not returning from disabled state
 UPDATE_DESCRIPTION: Fixed some issues with oembed breaking the user link
 UPDATE_DESCRIPTION: Added params to test when user is logged in or not before displaying certain portions of posts
 UPDATE_DESCRIPTION: Fixed missing function
