--- a/wall/register.conf
+++ b/wall/register.conf
@@ -3,14 +3,14 @@ MODULE_NAME: Wall
 MODULE_DESCRIPTION: A simple wall module that makes use of OEMBED and that tries to look a bit like Facebook's wall
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.067
+MODULE_VERSION: 0.068
 MODULE_PATH: wall
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: wall
 MODULE_CATEGORY: wall
-MODULE_STATUS: Beta
+MODULE_STATUS: stable
 
 DEPENDS: oembed
 
@@ -28,6 +28,7 @@ WIDEBLOCK: genericwall
 TABLE: tbl_wall_posts
 TABLE: tbl_wall_comments
 
+UPDATE_DESCRIPTION: [dwk] Tested and marked it stable
 UPDATE_DESCRIPTION: [dwk] Fixed a few bugs and added divs for styling
 UPDATE_DESCRIPTION: [dwk] Fixed button not returning from disabled state
 UPDATE_DESCRIPTION: Fixed some issues with oembed breaking the user link
