fixed bugs and added edit functionality for 7 form elements

--- a/formbuilder/register.conf
+++ b/formbuilder/register.conf
@@ -1,6 +1,6 @@
 MODULE_ID: formbuilder
 MODULE_NAME: Form Builder
-MODULE_DESCRIPTION: Users can generate forms through a WYSIWYG interface through this module without having to code anything.
+MODULE_DESCRIPTION: Users can generate HTML forms through a WYSIWYG interface through this module without having to code anything.
 MODULE_AUTHORS: Salman Noor
 MODULE_RELEASEDATE: 2010 07 07
 MODULE_VERSION: 0.19
