javascript validation, commented in some code

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: mynotes
 MODULE_NAME: My notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
-MODULE_AUTHORS: Derek Keats, Nguni Phakela
+MODULE_AUTHORS: Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.014
+MODULE_VERSION: 0.015
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -33,7 +33,7 @@ TEXT: mod_mynotes_allnotes|The words all notes|My notes
 TEXT: mod_mynotes_addnote|The words to add notes|Add a note
 TEXT: mod_mynotes_editnote|The words to edit a note|Edit a note
 TEXT: mod_mynotes_notetitle|The words note title|Title
-TEXT: mod_mynotes_notetag|The words tags|Tags
+TEXT: mod_mynotes_notetag|The words tags|Tags (Comma Separated)
 TEXT: mod_mynotes_noteeditor|The words content|Content
 TEXT: mod_mynotes_notecontentname|Note Editor Name|noteContent
 TEXT: mod_mynotes_validateaddednote|Validate an added note|Validate Added Note
