Fixed prelogin text - temporary.

--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.632
+MODULE_VERSION: 1.633
 MENU_CATEGORY: content
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
@@ -14,6 +14,7 @@ DEPENDS: filemanager
 ISCONTEXTPLUGIN: 1
 TAGS: context|elearning
 
+UPDATE_DESCRIPTION: [dwk] Added ability to have a 1, 2 or 3 column layout for [-CONTEXT-] content
 UPDATE_DESCRIPTION: Added styles to enable better skinning
 UPDATE_DESCRIPTION: Bug fixes for alert emails
 UPDATE_DESCRIPTION: Bug fixes for alert emails.
@@ -44,6 +45,7 @@ UPDATE_DESCRIPTION: User can now be able to post a comment on the page
 UPDATE_DESCRIPTION: Users can now view courses which are listed as public without login
 UPDATE_DESCRIPTION: Fixed text abstractions
 
+CONFIG: CONTEXTCONTENT_COLUMNS|3|mod_contextcontent_columns
 CONFIG: ENABLE_VIEWACTIVITYLOGS|false|mod_contextcontent_viewuseractivitylogs
 CONFIG: ENABLE_ACTIVITYSTREAMER|true|mod_contextcontent_enableactivitystreamer
 CONFIG: ENABLE_SCORM|true|mod_contextcontent_enable_scorm_desc
@@ -75,6 +77,7 @@ USES: word_error|Error|Error
 USES: mod_useradmin_searchresultsfor|Search Results for|Search Results for
 USES: mod_forum_searchfor|Search for|Search for
 
+TEXT: mod_contextcontent_columns|The column layout to use when viewing content|The column layout to use when viewing content (valid values are 1, 2, or 3)
 TEXT: mod_contextcontent_useractivitylogs|Phrase Users Activities|Users Activities
 TEXT: mod_contextcontent_viewuseractivitylogs|Phrase View Users Activities in [-context-] Content|View Users Activities in [-context-] Content
 TEXT: mod_contextcontent_viewcontextcontentusage|Phrase [-context-] Content Usage|[-context-] Usage
