Fixing bug caused by un-instantiated object being called

--- a/blog/register.conf
+++ b/blog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Blog
 MODULE_DESCRIPTION: A personal weblog (Blog). A blog is a website where entries are made in journal style and displayed in a reverse chronological order. Blogs often provide commentary or news on a particular subject, such as food, politics, or local news; some function as more personal online diaries. A typical blog combines text, images, and links to other blogs, web pages, and other media related to its topic. Most blogs are primarily textual although some focus on photographs (photoblog), videos (vlog), or audio (podcasting), and are part of a wider network of social media. The term "blog" is a contraction of "Web log."
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 1.858
+MODULE_VERSION: 1.859
 MODULE_PATH: blog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MENU_CATEGORY: user
 
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: Fixed bug where show all blogs option tried to call a non-existing object
 UPDATE_DESCRIPTION: Fixed the overkill on security improvement
 UPDATE_DESCRIPTION: Security improvement
 UPDATE_DESCRIPTION: Changed label for editing post
