--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: bookmarks
 MODULE_DESCRIPTION: Manage bookmarking within the system
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 28, 2012, 12:34 pm
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.004
 MODULE_PATH: bookmarks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,13 +13,16 @@ MODULE_CATEGORY: bookmarks
 
 UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
+UPDATE_DESCRIPTION: [KDC] Fixed menu positioning
 
 DEPENDS: jquerycore
 
 TABLE: tbl_bookmarks_bookmarks
 TABLE: tbl_bookmarks_folders
 
-MENU_CATEGORY: Developer
+MENU_CATEGORY: user
+SIDEMENU: postlogin-1|site
+SIDEMENU: user-2
 
 BLOCK: bookmarks
 
