--- a/grades/register.conf
+++ b/grades/register.conf
@@ -1,23 +1,33 @@
 MODULE_ID: grades
 MODULE_NAME: Learning components
-MODULE_DESCRIPTION: Module to hold learning components - can be used in conjunction with the schools module
+MODULE_DESCRIPTION: Module to hold learning components - can be used in conjunction with the [-organisations-] module
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 17, 2012, 5:59 pm
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.004
 MODULE_PATH: grades
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: grades
-MODULE_CATEGORY: grades
+MODULE_CATEGORY: [-organisations-]
+
+UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
+UPDATE_DESCRIPTION: [KDC] Added strandsÜ
+
+DEPENDS: schools
+DEPENDS: jquerycore
 
 COMMENT: Main tables
 TABLE: tbl_grades_grades
 TABLE: tbl_grades_subjects
 TABLE: tbl_grades_classes
+TABLE: tbl_grades_strands
 TABLE: tbl_grades_bridging
 
-MENU_CATEGORY: Developer
+MENU_CATEGORY: Admin
+SIDEMENU: admin-2
+PAGE: admin_organise||Learning Components
+
 
 USE GROUPS: School Managers
 
@@ -47,7 +57,7 @@ USES: word_enter|The word enter|Enter
 COMMENT: Common phrases
 
 COMMENT: Module text
-TEXT: mod_grades_description|Grades description|This is the area where you manage [-levels-], [-subjects-] and [-groupings-]. You can also manage the relationships between these elements and these elements and [-contexts-]
+TEXT: mod_grades_description|Grades description|This is the area where you manage [-levels-], [-subjects-], [-strands-] and [-groupings-]. You can also manage the relationships between these elements and these elements and [-contexts-]
 TEXT: mod_grades_managecomponents|Manage components|Manage components
 TEXT: mod_grades_mainpage|Main page|Main page
 TEXT: mod_grades_deleteconfirm|Are you sure you want to delete this [-item-]|Are you sure you want to delete this [-item-]
@@ -98,6 +108,22 @@ TEXT: mod_grades_selectsubject|Select [-subject-] ...|Select [-subject-] ...
 TEXT: mod_grades_linktosubject|Add link to [-subject-]|Add link to [-subject-]
 TEXT: mod_grades_linkedsubjects|Linked [-subjects-]|Linked [-subjects-]
  
+TEXT: mod_grades_managestrands|Manage [-strands-]|Manage [-strands-]
+TEXT: mod_grades_strand|[-strand-]|[-strand-]
+TEXT: mod_grades_strands|[-strands-]|[-strands-]
+TEXT: mod_grades_addstrand|Add [-strand-]|Add [-strand-]
+TEXT: mod_grades_editstrand|Edit [-strand-]|Edit [-strand-]
+TEXT: mod_grades_deletestrand|Delete [-strand-]|Delete [-strand-]
+TEXT: mod_grades_selectstrand|Select [-strand-]|Select [-strand-]
+TEXT: mod_grades_enterstrand|Enter [-strand-]|Enter [-strand-]
+TEXT: mod_grades_leavestrand|Leave [-strand-]|Leave [-strand-]
+TEXT: mod_grades_strandslist|[-strand-] list|[-strand-] list
+TEXT: mod_grades_nostrands|No [-strands-] found|No [-strands-] found
+TEXT: mod_grades_linkstrand|Link [-strand-]|Link [-strand-]
+TEXT: mod_grades_selectstrand|Select [-strand-] ...|Select [-strand-] ...
+TEXT: mod_grades_linktostrand|Add link to [-strand-]|Add link to [-strand-]
+TEXT: mod_grades_linkedstrands|Linked [-strands-]|Linked [-strands-]
+ 
 TEXT: mod_grades_manageclasses|Manage [-groupings-]|Manage [-groupings-]
 TEXT: mod_grades_class|[-grouping-]|[-grouping-]
 TEXT: mod_grades_classes|[-groupings-]|[-groupings-]
@@ -117,6 +143,7 @@ TEXT: mod_grades_linkedclasses|Linked [-groupings-]|Linked [-groupings-]
 COMMENT: Error text
 TEXT: mod_grades_errorgrade|Please select a [-level-]|Please select a [-level-]
 TEXT: mod_grades_errorsubject|Please select a [-subject-]|Please select a [-subject-]
+TEXT: mod_grades_errorstrand|Please select a [-strand-]|Please select a [-strand-]
 TEXT: mod_grades_errorclass|Please select a [-grouping-]|Please select a [-grouping-]
 TEXT: mod_grades_errorcontext|Please select a [-context-]|Please select a [-context-]
 TEXT: mod_grades_errorschool|Please select a [-organisation-]|Please select a [-organisation-]
