--- a/schools/register.conf
+++ b/schools/register.conf
@@ -3,16 +3,17 @@ MODULE_NAME: [-organisations-]
 MODULE_DESCRIPTION: Simple facility to store [-organisation-] basic data
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 10, 2012, 3:20 pm
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.005
 MODULE_PATH: schools
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schools
-MODULE_CATEGORY: schools
+MODULE_CATEGORY: [-organisations-]
 
 UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
+UPDATE_DESCRIPTION: [KDC] Fixed menu locations
 
 DEPENDS: jquerycore
 
@@ -21,7 +22,9 @@ TABLE: tbl_schools_districts
 TABLE: tbl_schools_schools
 TABLE: tbl_schools_contacts
 
-MENU_CATEGORY: Developer
+MENU_CATEGORY: Admin
+PAGE: admin_organise||[-organisations-]
+SIDEMENU: admin-2
 
 USE_GROUPS: Principals
 USE GROUPS: School Managers
