Added SIDEMENU tag.

--- a/survey/register.conf
+++ b/survey/register.conf
@@ -12,6 +12,7 @@ MODULE_STATUS: stable
 MODULE_LANGTERMS: Survey Manager
 MENU_CATEGORY: user
 SIDEMENU: postlogin-1|site
+SIDEMENU: elearnpostlogin-1|site
 
 UPDATE_DESCRIPTION: Fixed Groups related bugs
 UPDATE_DESCRIPTION: Fixed quote display bug
