--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: bookmarks
 MODULE_DESCRIPTION: Manage bookmarking within the system
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 28, 2012, 12:34 pm
-MODULE_VERSION: 0.004
+MODULE_VERSION: 0.005
 MODULE_PATH: bookmarks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,8 @@ MODULE_CATEGORY: bookmarks
 UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [KDC] Fixed menu positioning
+UPDATE_DESCRIPTION: [KDC] Added icon to go to bookmarks
+UPDATE_DESCRIPTION: [KDC] Added contextcode
 
 DEPENDS: jquerycore
 
@@ -60,6 +62,7 @@ TEXT: mod_bookmarks_nofolderbookmarks|No bookmarks found in this folder|No bookm
 TEXT: mod_bookmarks_bookmarkhome|Click on a folder to view the bookmarks in that folder|Click on a folder to view the bookmarks in that folder
 TEXT: mod_bookmarks_bookmarkname|Bookmark name|Bookmark name
 TEXT: mod_bookmarks_success|Your bookmark for this page has been successfully saved|Your bookmark for this page has been successfully saved.
+TEXT: mod_bookmarks_gotobookmarks|Go to bookmarks|Got to bookmarks
 
 TEXT: mod_bookmarks_invalidaction|Invalid action|Invalid action
 TEXT: mod_bookmarks_actionerror|Action error|You have performed an invalid action or you have tried an action you are not authorised to perform
